# candle

./: Cargo.toml  qualia_xor_Cargo.toml
candle-core/: Cargo.toml
candle-core/src/cpu/: mod.rs  ndarray_dispatch.rs
candle-core/src/cpu_backend/: hpc_dispatch.rs  mod.rs
candle-core/tests/: matmul_tests.rs
candle-examples/examples/quantized-lfm2/: main.rs
candle-nn/: Cargo.toml
candle-nn/src/: ops.rs
candle-transformers/src/models/paddleocr_vl/: mod.rs
qualia_xor_src/: main.rs
