[package]
name = "candle-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
accelerate-src = { workspace = true, optional = true }
byteorder = { workspace = true }
candle-kernels = { workspace = true, optional = true }
candle-metal-kernels = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
gemm = { workspace = true }
half = { workspace = true }
float8 = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
libm = { workspace = true }
memmap2 = { workspace = true }
# `AdaWorldAPI/ndarray` — HPC fork providing a three-tier bf16 tile GEMM
# (AMX TDPBF16PS / AVX-512 VDPBF16PS / scalar). Optional; gated behind the
# `ndarray-hpc` feature so the stock candle build is unaffected. Same pin as
# burn's `burn-ndarray`.
ndarray = { git = "https://github.com/AdaWorldAPI/ndarray", branch = "master", default-features = false, features = ["std"], optional = true }
num-traits = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
yoke = { workspace = true }
zip = { workspace = true }
tokenizers = { workspace = true, features = ["onig"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
candle-ug = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
criterion = { workspace = true }

[features]
default = []
cuda = ["cudarc", "dep:candle-kernels", "candle-ug?/cuda"]
cudnn = ["cuda", "cudarc/cudnn"]
nccl = ["cuda", "cudarc/nccl"]
mkl = ["dep:libc", "dep:intel-mkl-src"]
# Add CPU bf16 matmul (unsupported by the default CPU backend) via the
# AdaWorldAPI/ndarray fork's bf16 tile GEMM: AMX TDPBF16PS / AVX-512 VDPBF16PS /
# scalar reference, all accumulating in f32 (FMA), no f32 round-trip of inputs.
# f32/f16/f64 paths are untouched. NOTE: enabling this raises the build's MSRV to
# rustc 1.95 (the fork's pinned toolchain). The stock candle build is unaffected.
ndarray-hpc = ["dep:ndarray"]
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = [
    "dep:objc2-metal",
    "dep:objc2-foundation",
    "dep:candle-metal-kernels",
    "candle-ug?/metal",
]
ug = ["dep:candle-ug"]

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "metal_basics"
required-features = ["metal"]

[[example]]
name = "cuda_basics"
required-features = ["cuda"]
